Java 17 to Java 8 syntx